# masters-jarno-vanruymbeke

./: .gitignore  DOCS.md  README.md
API/GPIO/: GPIO.md  gpio_resources.wit  gpio_simple.wit
API/GPIO/gpio/: Cargo.toml
API/GPIO/gpio/src/: bindings.rs  lib.rs
API/GPIO/gpio/wit/: gpio_simple.wit  world.wit
API/GPIO/gpio_v1/: gpio.wit
GPIO/: gpio.wit
GPIO/impl/i/: Cargo.toml
GPIO/impl/i/src/: main.rs
GPIO/wit/: deps.toml  gpio.wit  new_gpio.wit
SPI/wit/: imports.wit  spi.wit
Testing/ComponentModel/file_reader/: Makefile  final.wasm
Testing/ComponentModel/file_reader/a/: test
Testing/ComponentModel/file_reader/file_reader/: Cargo.toml
Testing/ComponentModel/file_reader/file_reader/src/: bindings.rs  lib.rs
Testing/ComponentModel/file_reader/file_reader/wit/: world.wit
Testing/ComponentModel/file_reader/invoker/: Cargo.toml
Testing/ComponentModel/file_reader/invoker/src/: bindings.rs  main.rs
Testing/ComponentModel/file_reader/wit/file_reader/: world.wit
Testing/ComponentModel/file_reader/wit/invoker/: world.wit
Testing/ComponentModel/wasmtime_api/host/: Cargo.toml  README.md  hello.wat  no_wasi.wasm
Testing/ComponentModel/wasmtime_api/host/src/: main.rs
Testing/ComponentModel/wasmtime_api/no-wasi/: Cargo.toml
Testing/ComponentModel/wasmtime_api/no-wasi/src/: lib.rs
Testing/ComponentModel/wasmtime_api/only_export/: Cargo.toml
Testing/ComponentModel/wasmtime_api/only_export/src/: bindings.rs
Testing/ComponentModel/wasmtime_api/small_print_implementation/host/: Cargo.toml
Testing/ComponentModel/wasmtime_api/small_print_implementation/host/src/: main.rs
wit/: gpio.wit
(+6 files in other folders)
