[package]
name = "file_reader"
version = "0.1.0"
edition = "2021"

[dependencies]
wit-bindgen-rt = { version = "0.39.0", features = ["bitflags"] }

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true

[package.metadata.component]
package = "example:file-reader"

[package.metadata.component.dependencies]

[package.metadata.component.target]
path = "../wit/file_reader"
world = "file-reader"