[package]
name = "invoker"
version = "0.1.0"
edition = "2021"

[dependencies]
wit-bindgen-rt = { version = "0.39.0", features = ["bitflags"] }

[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true

[package.metadata.component]
package = "example:invoker"

[package.metadata.component.target]
path = "../wit/invoker/world.wit"
world = "invoker"

[package.metadata.component.target.dependencies]
"example:file-reader" = { path = "../wit/file_reader" }

[package.metadata.component.dependencies]
